testsuite/bsc.typechecker/kind/TwoArgMissingTwo.bs.bsc-out.expected
checking package dependencies
compiling TwoArgMissingTwo.bs
Error: "TwoArgMissingTwo.bs", line 5, column 5: (T0025)
  The type `Foo' is applied to too few arguments.
